# tylerbenster.com

./: .gitignore  README.md  Static.hs  TODO.md  about.html  best-times.html  blog.html  circle.yml  commit_site.sh  contact.html  default.nix  deploy.sh  flake.nix  index.html  makefile  master.css  package-lock.json  postcss.config.js  release.nix  shell.nix  site.hs  speaking  speaking.html  tailwind.config.js  test  tylerbenster-com.cabal  writing  writing.html
.circleci/: config.yml
cal/: 30-min
css/: default.css  tylerbenster-com.cabal
drafts/: media.markdown
nix/: sources.json
posts/: 3d-print-me-a-masterpiece-on-gaudis-la-sagrada-familia.html  3d-print-week-nyc-2015  3d-print-week-nyc-2015.html  3d-printed-hearing-aids.html  3d-printing-manufacturing-promoting-maker-culture-ri  3d-printing-manufacturing-promoting-maker-culture-ri.html  3d-supply-chain-cscmp.html  aerial-of-new-zealand-hobbiton-milford-sound-queenstown-more.html  brown-from-the-sky.html  covid-vaccine.html  exone-3d-printing-facility-auburn-washington.html  from-china-to-inside-3d-printing  from-china-to-inside-3d-printing.html  general-electric-3d-printing.html  giving-guill-tool-hand.html  hp-3d-printer-untold-story  hp-3d-printer-untold-story.html  inside-3d-printing-chicago-gallery.html  iron-man-was-3d-printed  iron-man-was-3d-printed.html  misc-bugs.html  o-fiji.html  seth-magaziner-rhode-island-3d-printing  seth-magaziner-rhode-island-3d-printing.html  should-tesla-motors-use-3d-printing-tooling  should-tesla-motors-use-3d-printing-tooling.html  the-future-of-3d-printing.html  (+4 more)
(+52 files in other folders)
