name:               tylerbenster-com
version:            0.2.0.0
build-type:         Simple
cabal-version:      2.4

executable site
  main-is:          site.hs
  build-depends:    base >= 4.8
                  , hakyll >= 4.14
                  , hakyll-images >= 1.0.*
                  , process >= 1.6.*
                  , filepath >= 1.4.*
                  , pandoc >= 2.11
                  , text >= 1.2 && < 1.3
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
